add product endpoints
